--- a/index.html
+++ b/index.html
@@ -2134,9 +2134,9 @@ function canSubmitForm() {
       </div>
     </section>
 
-    <section id="about" class="about">
-      <div class="container">
-        <h2 class="section-title">About My Practice</h2>
+    <section id="about" class="about" aria-labelledby="about-title">
+  <div class="container">
+    <h2 class="section-title" id="about-title">About My Practice</h2>
         <div class="about-grid">
           <div>
             <p>I support adults and couples through anxiety, depression, trauma, burnout, and major life transitions. My approach uniquely combines traditional social work principles with advanced NLP (Neuro-Linguistic Programming) techniques, creating powerful pathways for lasting transformation.</p>
