--- a/index.html
+++ b/index.html
@@ -2071,11 +2071,10 @@ function canSubmitForm() {
     }
   </script>
   <a class="skip-link" href="#main">Skip to content</a>
-
-  <header role="banner">
-    <nav class="container">
-      <div class="brand">
-        <div class="logo-mark">MM</div>
+<header role="banner">
+  <nav class="container" role="navigation" aria-label="Main navigation">
+    <div class="brand">
+      <div class="logo-mark">MM</div>
         <div class="brand-name">Misha Morozov — Social Worker and NLP Psychotherapist</div>
       </div>
       <div class="nav-right">
