--- a/index.html
+++ b/index.html
@@ -2163,9 +2163,9 @@ function canSubmitForm() {
       </div>
     </section>
 
-    <section id="services" class="services">
-      <div class="container">
-        <h2 class="section-title">My Services</h2>
+    <section id="services" class="services" aria-labelledby="services-title">
+  <div class="container">
+    <h2 class="section-title" id="services-title">My Services</h2>
         <div class="services-grid">
           <article class="service">
             <h3>Individual Therapy with NLP</h3>
