--- a/index.html
+++ b/index.html
@@ -2207,9 +2207,9 @@ function canSubmitForm() {
       </div>
     </section>
 
-    <section id="who-i-help" class="who-i-help">
-      <div class="container">
-        <h2 class="section-title">Who I Help</h2>
+    <section id="who-i-help" class="who-i-help" aria-labelledby="who-i-help-title">
+  <div class="container">
+    <h2 class="section-title" id="who-i-help-title">Who I Help</h2>
         <div class="who-i-help-grid">
           <div class="help-card">
             <span class="icon">🧠</span>
