--- a/index.html
+++ b/index.html
@@ -2245,9 +2245,9 @@ function canSubmitForm() {
       </div>
     </section>
 
-    <section id="booking" class="booking">
-      <div class="container">
-        <h2 class="section-title">Book an Appointment</h2>
+    <section id="booking" class="booking" aria-labelledby="booking-title">
+  <div class="container">
+    <h2 class="section-title" id="booking-title">Book an Appointment</h2>
         <div class="booking-grid">
          <div>
          <form id="bookingForm" class="card">
