--- a/index.html
+++ b/index.html
@@ -2307,9 +2307,9 @@ function canSubmitForm() {
       </div>
     </section>
 
-    <section id="contact" class="contact">
-      <div class="container">
-        <h2 class="section-title">Contact Information</h2>
+    <section id="contact" class="contact" aria-labelledby="contact-title">
+  <div class="container">
+    <h2 class="section-title" id="contact-title">Contact Information</h2>
         <div class="contact-grid">
           <div class="info-list">
             <p><strong>📧 Email:</strong> <a href="mailto:info.mishamorozov@gmail.com">info.mishamorozov@gmail.com</a></p>
