--- a/index.html
+++ b/index.html
@@ -2326,9 +2326,9 @@ function canSubmitForm() {
       </div>
     </section>
 
-    <section id="testimonials" class="testimonials">
-      <div class="container">
-        <h2 class="section-title">What Clients Say</h2>
+    <section id="testimonials" class="testimonials" aria-labelledby="testimonials-title">
+  <div class="container">
+    <h2 class="section-title" id="testimonials-title">What Clients Say</h2>
         <div class="testimonials-grid">
           <div class="testimonial">
             <div class="testimonial-text">
