--- a/index.html
+++ b/index.html
@@ -2352,9 +2352,9 @@ function canSubmitForm() {
       </div>
     </section>
 
-    <section id="faq" class="faq">
-      <div class="container">
-        <h2 class="section-title">Frequently Asked Questions</h2>
+    <section id="faq" class="faq" aria-labelledby="faq-title">
+  <div class="container">
+    <h2 class="section-title" id="faq-title">Frequently Asked Questions</h2>
         
         <div class="faq-grid">
           <details>
