--- a/index.html
+++ b/index.html
@@ -612,9 +612,20 @@ summary:focus-visible {
     }
     
     .submit:disabled {
-      opacity: 0.6;
-      cursor: not-allowed;
-    }
+  opacity: 0.6;
+  cursor: not-allowed;
+}
+
+.submit .spinner {
+  display: inline-block;
+  width: 1rem;
+  height: 1rem;
+  border: 2px solid rgba(0,0,0,0.2);
+  border-top-color: #000;
+  border-radius: 50%;
+  animation: spin 0.8s linear infinite;
+  margin-right: 0.5rem;
+}
 
     .faq {
       background: linear-gradient(135deg, #0a0a0a 0%, #1a1a1a 100%);
