--- a/index.html
+++ b/index.html
@@ -2301,7 +2301,9 @@ function canSubmitForm() {
                 <label for="bk_message">Brief description (optional)</label>
                 <textarea id="bk_message" name="message" placeholder="Do you have any specific concerns?" maxlength="1000"></textarea>
               </div>
-              <button type="submit" class="submit" id="bookingBtn">Request Appointment</button>
+              <button type="submit" class="submit" id="bookingBtn">
+              <span id="bookingBtnText">Request Appointment</span>
+              </button>
               <div id="bookingStatus"></div>
             </form>
           </div>
