--- a/index.html
+++ b/index.html
@@ -2078,7 +2078,7 @@ function canSubmitForm() {
       } finally {
      // Re-enable button
      submitBtn.disabled = false;
-     submitBtn.innerHTML = t.submitBtn;
+     document.getElementById('bookingBtnText').textContent = t.submitBtn;
     }
     }
   </script>
