--- a/index.html
+++ b/index.html
@@ -2262,7 +2262,7 @@ function canSubmitForm() {
     <h2 class="section-title" id="booking-title">Book an Appointment</h2>
         <div class="booking-grid">
          <div>
-         <form id="bookingForm" class="card">
+         <form id="bookingForm" class="card" style="position:relative;">
     
         <!-- Honeypot anti-spam -->
     <div style="position:absolute;left:-9999px;opacity:0;height:0;width:0;pointer-events:none;" aria-hidden="true">
