--- a/index.html
+++ b/index.html
@@ -2111,9 +2111,9 @@ function canSubmitForm() {
   </header>
 
   <main id="main">
-    <section id="home" class="hero">
-      <div class="container hero-inner">
-        <h1>Experienced Social Worker with Advanced NLP Therapy Skills for Your Individual and Lasting Transformation</h1>
+    <section id="home" class="hero" aria-labelledby="hero-title">
+  <div class="container hero-inner">
+    <h1 id="hero-title">Experienced Social Worker with Advanced NLP Therapy Skills for Your Individual and Lasting Transformation</h1>
         <p id="hero-subtitle">Combining the power of Neuro-Linguistic Programming with compassionate psychotherapy. Specialized in rapid change techniques for individuals and couples. Available in-person in Holstebro or secure online sessions across Denmark.</p>
         <a class="cta" href="#booking">
           <span>Schedule a Consultation</span>
