--- a/index.html
+++ b/index.html
@@ -2328,7 +2328,7 @@ function canSubmitForm() {
           <div class="info-list">
             <p><strong>📧 Email:</strong> <a href="mailto:info.mishamorozov@gmail.com">info.mishamorozov@gmail.com</a></p>
             <p><strong>📱 Phone:</strong> <a href="tel:+4550300360">+45 50 30 03 60</a></p>
-            <p><strong>📱 WhatsApp:</strong> <a href="https://wa.me/4550300360">+45 50 30 03 60</a></p>
+            <p><strong>📱 WhatsApp:</strong> <a href="https://wa.me/4550300360" target="_blank" rel="noopener noreferrer">+45 50 30 03 60</a></p>
              <p><strong>📱 Viber:</strong> <a href="viber://chat?number=+4550300360">+45 50 30 03 60</a></p>
             <p><strong>📍 Location:</strong> Holstebro, Denmark</p>
             <p><strong>🕒 Hours:</strong> By appointment only</p>
