--- a/index.html
+++ b/index.html
@@ -63,9 +63,11 @@
       }
     }
    
-    *, *::before, *::after { box-sizing: border-box; }
-    html:focus-within { scroll-behavior: smooth; }
-    body {
+   *, *::before, *::after { box-sizing: border-box; }
+@media (prefers-reduced-motion: no-preference) {
+  html:focus-within { scroll-behavior: smooth; }
+}
+body {
       margin:0;
       font-family: ui-serif, Georgia, serif;
       line-height:1.6;
