--- a/index.html
+++ b/index.html
@@ -244,11 +244,12 @@ summary:focus-visible {
     }
    
     .hero::after {
-      content:"";
-      position:absolute;
-      inset:0;
-      background:radial-gradient(60% 60% at 50% 40%, rgba(255,255,255,.18), transparent 60%);
-    }
+  content:"";
+  position:absolute;
+  inset:0;
+  background:radial-gradient(60% 60% at 50% 40%, rgba(255,255,255,.18), transparent 60%);
+  pointer-events: none;
+}
    
     .hero-inner {
       position:relative;
