--- a/index.html
+++ b/index.html
@@ -2322,15 +2322,15 @@ function canSubmitForm() {
               </div>
               <div class="form-group">
                 <label for="bk_name">Your name (optional)</label>
-                <input id="bk_name" name="name" type="text" placeholder="Enter your full name" maxlength="100" />
-              </div>
-              <div class="form-group">
-                <label for="bk_email">Email address</label>
-                <input id="bk_email" name="email" type="email" placeholder="your@email.com" required maxlength="254" />
-              </div>
-              <div class="form-group">
-                <label for="bk_phone">Phone (optional)</label>
-                <input id="bk_phone" name="phone" type="tel" placeholder="+45 00 00 00 00" maxlength="20" />
+                <input id="bk_name" name="name" type="text" placeholder="Enter your full name" maxlength="100" autocomplete="name" />
+</div>
+<div class="form-group">
+  <label for="bk_email">Email address</label>
+  <input id="bk_email" name="email" type="email" placeholder="your@email.com" required maxlength="254" autocomplete="email" />
+</div>
+<div class="form-group">
+  <label for="bk_phone">Phone (optional)</label>
+  <input id="bk_phone" name="phone" type="tel" placeholder="+45 00 00 00 00" maxlength="20" autocomplete="tel" />
               </div>
               <div class="form-group">
                 <label for="bk_message">Brief description (optional)</label>
