--- a/index.html
+++ b/index.html
@@ -898,7 +898,7 @@ summary:focus-visible {
     @media print {
       header, .hero, .trust-indicators, .cta, .mobile-menu-toggle, #backToTop { display: none; }
       body { background: white; color: black; }
-      .about, .services, .booking, .contact, .faq, .who-i-help { background: white; color: black; padding: 1rem 0; }
+      .about, .services, .booking, .contact, .faq, .who-i-help, .testimonials { background: white; color: black; padding: 1rem 0; }
       .section-title { color: black; }
       .section-title::after { background: black; }
       .card, .service, .help-card, .glass { 
