--- a/index.html
+++ b/index.html
@@ -2339,7 +2339,7 @@ function canSubmitForm() {
               <button type="submit" class="submit" id="bookingBtn">
               <span id="bookingBtnText">Request Appointment</span>
               </button>
-              <div id="bookingStatus"></div>
+              <div id="bookingStatus" role="alert" aria-live="polite"></div>
             </form>
           </div>
           <div>
