--- a/index.html
+++ b/index.html
@@ -2128,7 +2128,7 @@ function canSubmitForm() {
         <button class="mobile-menu-toggle" id="mobileMenuToggle" aria-label="Toggle menu" aria-expanded="false" aria-controls="navLinks">
   <span>☰</span>
 </button>
-        <ul class="nav-links" id="navLinks">
+        <ul class="nav-links" id="navLinks" role="list">
           <li><a href="#home" class="nav-link">Home</a></li>
           <li><a href="#about" class="nav-link">About</a></li>
           <li><a href="#services" class="nav-link">Services</a></li>
