--- a/index.html
+++ b/index.html
@@ -1228,7 +1228,16 @@ const rateLimiter = {
 function canSubmitForm() {
   return rateLimiter.canSubmit();
 }
-
+function throttle(func, limit) {
+  let inThrottle;
+  return function() {
+    if (!inThrottle) {
+      func.apply(this, arguments);
+      inThrottle = true;
+      setTimeout(() => inThrottle = false, limit);
+    }
+  }
+}
     // Translation data
     const translations = {
       en: {
