--- a/index.html
+++ b/index.html
@@ -1903,7 +1903,7 @@ function throttle(func, limit) {
     contactInfo[0].innerHTML = `<strong>${sanitizeInput(t.contactEmail)}</strong> <a href="mailto:info.mishamorozov@gmail.com">info.mishamorozov@gmail.com</a>`;
     contactInfo[1].innerHTML = `<strong>${sanitizeInput(t.contactPhone)}</strong> <a href="tel:+4550300360">+45 50 30 03 60</a>`;
     contactInfo[2].innerHTML = `<strong>${sanitizeInput(t.contactWhatsApp)}</strong> <a href="https://wa.me/4550300360" target="_blank" rel="noopener noreferrer">+45 50 30 03 60</a>`;
-    contactInfo[3].innerHTML = `<strong>${sanitizeInput(t.contactViber)}</strong> <a href="viber://chat?number=+4550300360" rel="noopener noreferrer">+45 50 30 03 60</a>`;
+    contactInfo[3].innerHTML = `<strong>${sanitizeInput(t.contactViber)}</strong> <a href="viber://chat?number=+4550300360" target="_blank" rel="noopener noreferrer">+45 50 30 03 60</a>`;
     contactInfo[4].innerHTML = `<strong>${sanitizeInput(t.contactLocation)}</strong> ${sanitizeInput(t.contactLocationValue)}`;
     contactInfo[5].innerHTML = `<strong>${sanitizeInput(t.contactHours)}</strong> ${sanitizeInput(t.contactHoursValue)}`;
   }
