--- a/index.html
+++ b/index.html
@@ -1602,14 +1602,14 @@ function throttle(func, limit) {
       },
       ru: {
         skipToContent: "Перейти к содержанию",
-        brandName: "Миша Морозов — Социальный работник и NLP Психотерапевт",
+        brandName: "Миша Морозов — Социальный работник / Психотерапевт",
         navHome: "Главная",
         navAbout: "О мне",
         navServices: "Услуги",
         navBooking: "Запись",
         navContact: "Контакты",
         heroTitle: "Опытный социальный работник с передовыми навыками НЛП-терапии для вашей индивидуальной и длительной трансформации",
-        heroSubtitle: "Сочетание силы нейро-лингвистического программирования с сострадательной психотерапией. Специализируюсь на техниках быстрых изменений для отдельных людей и пар. Доступны личные встречи в Хольстебро или безопасные онлайн-сессии по всей Дании.",
+        heroSubtitle: "Сочетание силы нейро-лингвистического программирования с сострадательной психотерапией. Специализируюсь на техниках быстрых изменений для отдельных людей и пар. Доступны личные встречи в Хольстебро или через онлайн-сессии.",
         heroCta: "Записаться на консультацию",
         trustNLP: "Мастер и практик НЛП",
         trustDegree: "Датский диплом социального работника",
@@ -1656,16 +1656,16 @@ function throttle(func, limit) {
         whoIHelp5Title: "Семейные услуги",
         whoIHelp5Desc: "Дела о благополучии детей, поддержка родителей, воссоединение семьи, домашние ситуации",
         whoIHelp6Title: "Ведение дел",
-        whoIHelp6Desc: "Координация с органами власти, медицинская документация, долгосрочные сложные дела",
+        whoIHelp6Desc: "Координация с органами власти, документация, долгосрочные сложные дела. ",
         faqTitle: "Часто задаваемые вопросы",
         faq1Q: "В чем разница между терапией и социальной работой?",
         faq1A: "Терапия сосредоточена на психическом здоровье, эмоциональном благополучии и личностном росте с использованием техник НЛП. Услуги социальной работы помогают с практическими жизненными вопросами: навигацией в государственных системах, заявками на пособия, юридической документацией, ведением дел и защитой интересов перед органами власти.",
-        faq2Q: "Можете ли вы помочь с юридическими вопросами или заменить адвоката?",
-        faq2A: "Я предоставляю услуги по ведению дел и административной поддержке, включая подготовку документации и координацию с адвокатами. Однако я не являюсь адвокатом и не могу предоставлять юридические консультации. В юридических вопросах я работаю вместе с вашим юридическим представителем для обеспечения всесторонней поддержки.",
+        faq2Q: "Можете ли вы помочь с юридическими вопросами?",
+        faq2A: "Я предоставляю услуги по ведению дел и административной поддержке, включая подготовку документов, координацию и консультацию.",
         faq3Q: "С какими видами социальной помощи вы можете помочь?",
         faq3A: "Я помогаю с пенсией по инвалидности, пособиями по безработице, жилищной поддержкой, семейными пособиями, поддержкой интеграции и другими услугами социального обеспечения, доступными в Дании. Я помогаю с заявками, апелляциями и общением с органами власти.",
         faq4Q: "Работаете ли вы с датскими органами власти и государственными учреждениями?",
-        faq4A: "Да. Как лицензированный датский социальный работник, я регулярно координирую работу с коммунами, центрами занятости, жилищными службами, семейными службами и другими государственными учреждениями от имени моих клиентов. Я могу посещать встречи, готовить документацию и защищать ваши интересы.",
+        faq4A: "Да. Как Аккредитованный датский социальный работник, я регулярно координирую работу с коммунами, центрами занятости, жилищными службами, семейными службами и другими государственными учреждениями от имени моих клиентов. Я могу посещать встречи, готовить документацию и защищать ваши интересы.",
         faq5Q: "Можете ли вы помочь с иммиграционными вопросами и вопросами проживания?",
         faq5A: "Да. Я предоставляю поддержку с заявками на проживание, делами воссоединения семьи, интеграционными программами и навигацией в иммиграционных службах. Мои многоязычные навыки (украинский, русский, датский, английский) особенно полезны для новых иммигрантов.",
         faq6Q: "Как работают пакеты ведения дел?",
@@ -1678,14 +1678,14 @@ function throttle(func, limit) {
         bookingTitle: "Забронировать встречу",
         bookingFormTitle: "Выберите свою услугу",
         serviceType: "Тип услуги",
-        serviceFree: "Бесплатная консультация / Оценка (20 мин.) - Бесплатно",
-        serviceIndividual: "Индивидуальная НЛП терапия/Консультация (60 мин.) - 900 кр.",
-        serviceIntensive: "Интенсивная НЛП сессия/Консультация (90 мин.) - 1300 кр.",
-        serviceCouples: "НЛП сессия/Консультация для пар (90 мин) - 1400 кр.",
-        serviceSocial: "Консультация социального работника/Ведение дел (60 мин.) - 1000 кр.",
-        serviceSocialBasic: "Консультация социального работника/Ведение дел Базовый (240 мин./4 часа) - 3500 кр.",
-        serviceSocialMedium: "Консультация социального работника/Ведение дел Средний (600 мин./10 часов) - 8000 кр.",
-        serviceSocialLarge: "Консультация социального работника/Ведение дел Большой (900 мин./15 часов) - 11500 кр.",
+        serviceFree: "Бесплатная консультация / Оценка (20 мин.)  Бесплатно",
+        serviceIndividual: "Индивидуальная НЛП терапия/Консультация (60 мин.)  900 кр.",
+        serviceIntensive: "Интенсивная НЛП сессия/Консультация (90 мин.)  1300 кр.",
+        serviceCouples: "НЛП сессия/Консультация для пар (90 мин)  1400 кр.",
+        serviceSocial: "Консультация социального работника/Ведение дел (60 мин.)  1000 кр.",
+        serviceSocialBasic: "Консультация социального работника/Ведение дел Базовый (240 мин./4 часа)  3500 кр.",
+        serviceSocialMedium: "Консультация социального работника/Ведение дел Средний (600 мин./10 часов)  8000 кр.",
+        serviceSocialLarge: "Консультация социального работника/Ведение дел Большой (900 мин./15 часов)  11500 кр.",
         formName: "Ваше имя (необязательно)",
         formNamePlaceholder: "Введите ваше полное имя",
         formEmail: "Электронная почта",
@@ -1693,7 +1693,7 @@ function throttle(func, limit) {
         formPhone: "Телефон (необязательно)",
         formPhonePlaceholder: "+45 00 00 00 00",
         formMessage: "Краткое описание (необязательно)",
-        formMessagePlaceholder: "Есть ли у вас конкретные беспокойства?",
+        formMessagePlaceholder: "Чем я могу быть вам полезен?",
         submitBtn: "Запросить встречу",
         sessionInfoTitle: "Информация о сессии",
         sessionSchedule: "🕒 Гибкий график: будни и выходные",
