--- a/index.html
+++ b/index.html
@@ -1489,7 +1489,7 @@ function throttle(func, limit) {
         navBooking: "Запис",
         navContact: "Контакти",
         heroTitle: "Досвідчений соціальний працівник з передовими навичками НЛП-терапії для вашої індивідуальної та тривалої трансформації",
-        heroSubtitle: "Поєднання сили нейро-лінгвістичного програмування з співчутливою психотерапією. Спеціалізуюся на техніках швидких змін для окремих осіб та пар. Доступні особисті зустрічі в Хольстебро або безпечні онлайн-сесії по всій Данії.",
+        heroSubtitle: "Поєднання сили нейро-лінгвістичного програмування з співчутливою психотерапією. Спеціалізуюся на техніках швидких змін для окремих осіб та пар. Доступні особисті зустрічі в Хольстебро або через онлайн-сесії.",
         heroCta: "Записатися на консультацію",
         trustNLP: "Майстер та практик НЛП",
         trustDegree: "Датський диплом соціального працівника",
@@ -1536,36 +1536,36 @@ function throttle(func, limit) {
         whoIHelp5Title: "Сімейні послуги",
         whoIHelp5Desc: "Справи про добробут дітей, підтримка батьків, возз'єднання сім'ї, домашні ситуації",
         whoIHelp6Title: "Ведення справ",
-        whoIHelp6Desc: "Координація з органами влади, медична документація, довгострокові складні справи",
+        whoIHelp6Desc: "Координація з органами влади, документація, довгострокові складні справи",
         faqTitle: "Часті запитання",
         faq1Q: "Яка різниця між терапією та соціальною роботою?",
         faq1A: "Терапія зосереджена на психічному здоров'ї, емоційному благополуччі та особистісному зростанні з використанням технік НЛП. Послуги соціальної роботи допомагають з практичними життєвими питаннями: навігацією в державних системах, заявками на допомогу, юридичною документацією, веденням справ та захистом інтересів перед органами влади.",
-        faq2Q: "Чи можете ви допомогти з юридичними питаннями або замінити адвоката?",
-        faq2A: "Я надаю послуги з ведення справ та адміністративної підтримки, включаючи підготовку документації та координацію з адвокатами. Однак я не є адвокатом і не можу надавати юридичні консультації. У юридичних питаннях я працюю разом з вашим юридичним представником для забезпечення всебічної підтримки.",
+        faq2Q: "Чи можете ви допомогти з юридичними питаннями?",
+        faq2A: "Я надаю послуги з ведення справ та адміністративної підтримки, включаючи підготовку документів, координацію та Консультацію.",
         faq3Q: "З якими видами соціальної допомоги ви можете допомогти?",
         faq3A: "Я допомагаю з пенсією по інвалідності, допомогою з безробіття, житловою підтримкою, сімейними допомогами, підтримкою інтеграції та іншими послугами соціального забезпечення, доступними в Данії. Я допомагаю із заявками, апеляціями та спілкуванням з органами влади.",
         faq4Q: "Чи працюєте ви з данськими органами влади та державними установами?",
-        faq4A: "Так. Як ліцензований данський соціальний працівник, я регулярно координую роботу з комунами, центрами зайнятості, житловими службами, сімейними службами та іншими державними установами від імені моїх клієнтів. Я можу відвідувати зустрічі, готувати документацію та захищати ваші інтереси.",
+        faq4A: "Так. Як Акредитований данський соціальний працівник, я регулярно координую роботу з комунами, центрами зайнятості, житловими службами, сімейними службами та іншими державними установами від імені моїх клієнтів. Я можу відвідувати зустрічі, готувати документацію та захищати ваші інтереси.",
         faq5Q: "Чи можете ви допомогти з імміграційними та питаннями проживання?",
         faq5A: "Так. Я надаю підтримку із заявками на проживання, справами возз'єднання сім'ї, інтеграційними програмами та навігацією в імміграційних службах. Мої багатомовні навички (українська, російська, данська, англійська) особливо корисні для нових іммігрантів.",
         faq6Q: "Як працюють пакети ведення справ?",
         faq6A: "Пакети ведення справ забезпечують постійну підтримку у складних ситуаціях. Це включає регулярні зустрічі, підготовку документації, координацію з органами влади, захист інтересів та довгострокове планування. Години можна використовувати гнучко залежно від потреб вашої справи.",
         faq7Q: "Якими мовами ви говорите для юридичної/адміністративної підтримки?",
-        faq7A: "Я надаю послуги данською, українською, російською та в деяких випадках англійською мовами. Це особливо важливо при спілкуванні з органами влади, оскільки я можу допомогти з перекладом та гарантувати, що ви повністю розумієте свої права та обов'язки.",
+        faq7A: "Я надаю послуги данською, українською, російською та в деяких випадках англійською мовoю. Це особливо важливо при спілкуванні з органами влади, оскільки я можу допомогти з перекладом та гарантувати, що ви повністю розумієте свої права та обов'язки.",
         faq8Q: "Чи можу я замовити і терапію, і соціальну роботу?",
         faq8A: "Звісно! Багато клієнтів отримують користь від комбінованої підтримки - вирішення як потреб психічного здоров'я, так і практичних життєвих викликів. Ми можемо створити інтегрований план, який підтримує ваше благополуччя цілісно.",
         testimonialsTitle: "Що Кажуть Клієнти",
         bookingTitle: "Забронювати зустріч",
         bookingFormTitle: "Виберіть свою послугу",
         serviceType: "Тип послуги",
-        serviceFree: "Безкоштовна консультація / Оцінка (20 хв.) - Безкоштовно",
-        serviceIndividual: "Індивідуальна НЛП терапія/Консультація (60 хв.) - 900 кр.",
-        serviceIntensive: "Інтенсивна НЛП сесія/Консультація (90 хв.) - 1300 кр.",
-        serviceCouples: "НЛП сесія/Консультація для пар (90 хв) - 1400 кр.",
-        serviceSocial: "Консультація соціального працівника/Ведення справ (60 хв.) - 1000 кр.",
-        serviceSocialBasic: "Консультація соціального працівника/Ведення справ Базовий (240 хв./4 години) - 3500 кр.",
-        serviceSocialMedium: "Консультація соціального працівника/Ведення справ Середній (600 хв./10 годин) - 8000 кр.",
-        serviceSocialLarge: "Консультація соціального працівника/Ведення справ Великий (900 хв./15 годин) - 11500 кр.",
+        serviceFree: "Безкоштовна консультація / Оцінка (20 хв.)  Безкоштовно",
+        serviceIndividual: "Індивідуальна НЛП терапія/Консультація (60 хв.)  900 кр.",
+        serviceIntensive: "Інтенсивна НЛП сесія/Консультація (90 хв.)  1300 кр.",
+        serviceCouples: "НЛП сесія/Консультація для пар (90 хв)  1400 кр.",
+        serviceSocial: "Консультація соціального працівника/Ведення справ (60 хв.)  1000 кр.",
+        serviceSocialBasic: "Консультація соціального працівника/Ведення справ Базовий (240 хв./4 години)  3500 кр.",
+        serviceSocialMedium: "Консультація соціального працівника/Ведення справ Середній (600 хв./10 годин)  8000 кр.",
+        serviceSocialLarge: "Консультація соціального працівника/Ведення справ Великий (900 хв./15 годин)  11500 кр.",
         formName: "Ваше ім'я (необов'язково)",
         formNamePlaceholder: "Введіть ваше повне ім'я",
         formEmail: "Електронна адреса",
@@ -1573,7 +1573,7 @@ function throttle(func, limit) {
         formPhone: "Телефон (необов'язково)",
         formPhonePlaceholder: "+45 00 00 00 00",
         formMessage: "Короткий опис (необов'язково)",
-        formMessagePlaceholder: "Чи є у вас конкретні занепокоєння?",
+        formMessagePlaceholder: "Чим можу допомогти?",
         submitBtn: "Запитати зустріч",
         sessionInfoTitle: "Інформація про сесію",
         sessionSchedule: "🕒 Гнучкий графік: будні та вихідні",
