--- a/index.html
+++ b/index.html
@@ -1369,7 +1369,7 @@ function throttle(func, limit) {
         navBooking: "Booking",
         navContact: "Kontakt",
         heroTitle: "Erfaren Socialrådgiver med Avancerede NLP Terapifærdigheder til Din Individuelle og Varige Transformation",
-        heroSubtitle: "Kombinerer kraften fra Neuro-Lingvistisk Programmering med medfølende psykoterapi. Specialiseret i hurtige forandringsteknikker for enkeltpersoner og par. Tilgængelig personligt i Holstebro eller sikre online-sessioner i hele Danmark.",
+        heroSubtitle: "Kombinerer kraften fra Neuro-Lingvistisk Programmering med medfølende psykoterapi. Specialiseret i hurtige forandringsteknikker for enkeltpersoner og par. Tilgængelig personligt i Holstebro eller via online-sessioner.",
         heroCta: "Book en Konsultation",
         trustNLP: "NLP Mester og Practitioner",
         trustDegree: "Dansk Socialrådgiver Grad",
@@ -1378,7 +1378,7 @@ function throttle(func, limit) {
         trustOnline: "Online & Personligt",
         aboutTitle: "Om Min Praksis",
         aboutPara1: "Jeg støtter voksne og par gennem angst, depression, traume, udbrændthed og større livsovergange. Min tilgang kombinerer unikt traditionelle socialarbejdsprincipper med avancerede NLP (Neuro-Lingvistisk Programmering) teknikker, hvilket skaber kraftfulde veje til varig transformation.",
-        aboutPara2: "Vi vil arbejde sammen—i dit tempo—for at forstå tankemønstre, omprogrammere begrænsende overbevisninger og opbygge bæredygtige mestringsstrategier. Ved at bruge NLP's dokumenterede metoder sammen med medfølende terapi, er hver session skræddersyet til dine unikke behov og kulturelle baggrund.",
+        aboutPara2: "Vi vil arbejde sammen i dit tempo for, at forstå tankemønstre, omprogrammere begrænsende overbevisninger og opbygge bæredygtige mestringsstrategier. Ved at bruge NLP's dokumenterede metoder sammen med medfølende terapi, er hver session skræddersyet til dine unikke behov og kulturelle baggrund.",
         aboutPara3: "Som socialrådgiver kan jeg hjælpe dig gennem din individuelle sag med tålmodighed og engagement. Med min brede erfaring i den danske stat kan jeg hjælpe dig med et højt serviceniveau og lade dig føle den virkelige betydning af empowerment. Så prøv det og book din gratis konsultation med mig, og lad os tage det første skridt sammen.",
         credentialsTitle: "Professionelle Kvalifikationer",
         credential1: "Akkrediteret Dansk Socialrådgiver",
@@ -1404,7 +1404,7 @@ function throttle(func, limit) {
         service8Desc: "Professionel støtte til komplekse livssituationer, der involverer juridiske eller administrative forhold. Assistance med familieretssager, forældremyndighed, boligtvister, arbejdsplads konflikter, dokumentation til myndigheder, klageprocedurer og koordinering med advokater og offentlige instanser.",
         service9Title: "Migrations- & Integrationsstøtte",
         service9Desc: "Specialiseret støtte til indvandrere og flygtninge i Danmark. Hjælp med opholdstilladelse, familiesammenføring, integrationsprogrammer, kulturel tilpasning, sprogbarrierer med myndigheder, beskæftigelseshjælp og forståelse af danske sociale systemer. Tilgængelig på ukrainsk, russisk, dansk og engelsk.",
-        whoIHelpTitle: "Hvem Jeg Hjælper",
+        whoIHelpTitle: "Hvem Hjælper jeg",
         whoIHelp1Title: "Mental Sundhedsstøtte",
         whoIHelp1Desc: "Angst, depression, traume, udbrændthed, relationsproblemer, fobier, livsovergange",
         whoIHelp2Title: "Sociale Velfærdssager",
@@ -1416,36 +1416,36 @@ function throttle(func, limit) {
         whoIHelp5Title: "Familieydelser",
         whoIHelp5Desc: "Børnevelfærdssager, forældrestøtte, familiesammenføring, hjemmesituationer",
         whoIHelp6Title: "Sagsbehandling",
-        whoIHelp6Desc: "Koordinering med myndigheder, medicinsk dokumentation, langsigtede komplekse sager",
+        whoIHelp6Desc: "Koordinering med myndigheder, dokumentation, langsigtede komplekse sager og konsultation",
         faqTitle: "Ofte Stillede Spørgsmål",
         faq1Q: "Hvad er forskellen mellem terapi og socialrådgivning?",
         faq1A: "Terapi fokuserer på mental sundhed, følelsesmæssig trivsel og personlig vækst ved hjælp af NLP-teknikker. Socialrådgivning hjælper med praktiske livsforhold: navigation i offentlige systemer, ansøgninger om ydelser, juridisk dokumentation, sagsbehandling og interessevaretagelse over for myndighederne.",
-        faq2Q: "Kan du hjælpe med juridiske forhold eller erstatte en advokat?",
-        faq2A: "Jeg tilbyder sagsbehandling og administrativ støtte, herunder forberedelse af dokumentation og koordinering med advokater. Jeg er dog ikke advokat og kan ikke give juridisk rådgivning. Ved juridiske forhold arbejder jeg sammen med din juridiske repræsentation for at sikre omfattende støtte.",
+        faq2Q: "Kan du hjælpe med juridiske forhold?",
+        faq2A: "Jeg tilbyder sagsbehandling og administrativ støtte, herunder forberedelse af dokumentation og koordinering, samt konsultation.",
         faq3Q: "Hvilke typer sociale velfærdsydelser kan du hjælpe med?",
         faq3A: "Jeg hjælper med førtidspension, dagpenge, boligstøtte, familieydelser, integrationsstøtte og andre sociale velfærdsydelser tilgængelige i Danmark. Jeg hjælper med ansøgninger, klager og kommunikation med myndighederne.",
         faq4Q: "Arbejder du med danske myndigheder og offentlige instanser?",
-        faq4A: "Ja. Som autoriseret dansk socialrådgiver koordinerer jeg regelmæssigt med kommuner, jobcentre, boligtjenester, familietjenester og andre offentlige instanser på mine klienters vegne. Jeg kan deltage i møder, forberede dokumentation og varetage dine behov.",
+        faq4A: "Ja. Som akrediteret dansk socialrådgiver koordinerer jeg regelmæssigt med kommuner, jobcentre, boligtjenester, familietjenester og andre offentlige instanser på mine klienters vegne. Jeg kan deltage i møder, forberede dokumentation og varetage dine behov.",
         faq5Q: "Kan du hjælpe med immigration og opholdsspørgsmål?",
         faq5A: "Ja. Jeg yder støtte til ansøgninger om opholdstilladelse, familiesammenføringssager, integrationsprogrammer og navigation i immigrationstjenester. Mine flersprogede færdigheder (ukrainsk, russisk, dansk, engelsk) er særligt nyttige for nylige indvandrere.",
         faq6Q: "Hvordan fungerer sagsbehandlingspakkerne?",
         faq6A: "Sagsbehandlingspakker giver løbende støtte til komplekse situationer. Dette inkluderer regelmæssige møder, forberedelse af dokumentation, koordinering med myndigheder, interessevaretagelse og langsigtet planlægning. Timerne kan bruges fleksibelt baseret på dine sagsbehov.",
-        faq7Q: "Hvilke sprog taler du til juridisk/administrativ støtte?",
-        faq7A: "Jeg leverer tjenester på dansk, ukrainsk, russisk og i nogle tilfælde engelsk. Dette er især vigtigt, når man har med myndighederne at gøre, da jeg kan hjælpe med at oversætte og sikre, at du fuldt ud forstår dine rettigheder og forpligtelser.",
+        faq7Q: "Hvilke sprog behersker du i juridisk/administrativ støtte?",
+        faq7A: "Jeg leverer tjenester på dansk, ukrainsk, russisk og i nogle tilfælder på engelsk. Dette er især vigtigt, når man har med myndighederne at gøre, da jeg kan hjælpe med at oversætte og sikre, at du fuldt ud forstår dine rettigheder og forpligtelser.",
         faq8Q: "Kan jeg booke både terapi og socialrådgivning?",
         faq8A: "Absolut! Mange klienter drager fordel af kombineret støtte - adressering af både mentale sundhedsbehov og praktiske livs udfordringer. Vi kan skabe en integreret plan, der støtter dit velvære holistisk.",
         testimonialsTitle: "Hvad Klienter Siger",
         bookingTitle: "Book en Tid",
         bookingFormTitle: "Vælg Din Tjeneste",
         serviceType: "Tjenestetype",
-        serviceFree: "Gratis Konsultation / Vurdering (20 min.) - Gratis",
-        serviceIndividual: "Individuel NLP Terapi/Konsultation (60 min.) - 900 kr.",
-        serviceIntensive: "NLP Intensiv Session/Konsultation (90 min.) - 1300 kr.",
-        serviceCouples: "Par NLP Session/Konsultation (90 min) - 1400 kr.",
-        serviceSocial: "Socialrådgivning/Sagsbehandling (60 min.) - 1000 kr.",
-        serviceSocialBasic: "Socialrådgivning/Sagsbehandling Basis (240 min./4 Timer) - 3500 kr.",
-        serviceSocialMedium: "Socialrådgivning/Sagsbehandling Medium (600 min./10 Timer) - 8000 kr.",
-        serviceSocialLarge: "Socialrådgivning/Sagsbehandling Stor (900 min./15 Timer) - 11500 kr.",
+        serviceFree: "Gratis Konsultation / Vurdering (20 min.) Gratis",
+        serviceIndividual: "Individuel NLP Terapi/Konsultation (60 min.) 900 kr.",
+        serviceIntensive: "NLP Intensiv Session/Konsultation (90 min.) 1300 kr.",
+        serviceCouples: "Par NLP Session/Konsultation (90 min) 1400 kr.",
+        serviceSocial: "Socialrådgivning/Sagsbehandling (60 min.) 1000 kr.",
+        serviceSocialBasic: "Socialrådgivning/Sagsbehandling Basis (240 min./4 Timer) 3500 kr.",
+        serviceSocialMedium: "Socialrådgivning/Sagsbehandling Medium (600 min./10 Timer) 8000 kr.",
+        serviceSocialLarge: "Socialrådgivning/Sagsbehandling Stor (900 min./15 Timer) 11500 kr.",
         formName: "Dit navn (valgfrit)",
         formNamePlaceholder: "Indtast dit fulde navn",
         formEmail: "E-mailadresse",
@@ -1459,7 +1459,7 @@ function throttle(func, limit) {
         sessionSchedule: "🕒 Fleksibel planlægning: hverdage & weekender",
         sessionInPerson: "📍 Mulige personlige sessioner",
         sessionOnline: "💻 Online platforme: WhatsApp, Viber eller andre alternative videoplatforme",
-        sessionLanguages: "🌍 Sprog: Dansk, Ukrainsk, Russisk, i nogle tilfælde - Engelsk",
+        sessionLanguages: "🌍 Sprog: Dansk, Ukrainsk, Russisk, i nogle tilfælder - Engelsk",
         sessionPayment: "💳 Betaling: Bankoverførsel eller MobilePay",
         contactTitle: "Kontaktinformation",
         contactEmail: "📧 E-mail:",
