--- a/index.html
+++ b/index.html
@@ -1249,7 +1249,7 @@ function throttle(func, limit) {
         navBooking: "Booking",
         navContact: "Contact",
         heroTitle: "Experienced Social Worker with Advanced NLP Therapy Skills for Your Individual and Lasting Transformation",
-        heroSubtitle: "Combining the power of Neuro-Linguistic Programming with compassionate psychotherapy. Specialized in rapid change techniques for individuals and couples. Available in-person in Holstebro or secure online sessions across Denmark.",
+        heroSubtitle: "Combining the power of Neuro-Linguistic Programming with compassionate psychotherapy. Specialized in rapid change techniques for individuals and couples. Available in-person in Holstebro or within secure online sessions.",
         heroCta: "Schedule a Consultation",
         trustNLP: "NLP Master and Practitioner",
         trustDegree: "Danish Social Worker Degree",
@@ -1279,7 +1279,7 @@ function throttle(func, limit) {
         service6Title: "Stress & Performance Optimization",
         service6Desc: "Advanced stress management using NLP anchoring, state management, and resource accessing techniques. Ideal for professionals seeking peak performance and sustainable wellbeing.",
         service7Title: "Social Welfare & Benefits Navigation",
-        service7Desc: "Expert guidance through Denmark's social welfare system. Help with disability benefits (førtidspension), unemployment benefits (dagpenge), housing support (boligstøtte), integration assistance, and family support services. I advocate for your rights and ensure you receive entitled support.",
+        service7Desc: "Expert guidance through Denmark's social welfare system. Help with disability benefits, unemployment benefits, housing support, integration assistance, and family support services. I advocate for your rights and ensure you receive entitled support.",
         service8Title: "Legal & Administrative Case Management",
         service8Desc: "Professional support for complex life situations involving legal or administrative matters. Assistance with family law cases, child custody, housing disputes, workplace conflicts, documentation for authorities, appeal processes, and coordination with lawyers and government agencies.",
         service9Title: "Migration & Integration Support",
@@ -1296,16 +1296,16 @@ function throttle(func, limit) {
         whoIHelp5Title: "Family Services",
         whoIHelp5Desc: "Child welfare cases, parenting support, family reunification, domestic situations",
         whoIHelp6Title: "Case Management",
-        whoIHelp6Desc: "Coordination with authorities, medical documentation, long-term complex cases",
+        whoIHelp6Desc: "Coordination with authorities, documentation, long-term complex cases, consultation",
         faqTitle: "Frequently Asked Questions",
         faq1Q: "What's the difference between therapy and social work services?",
         faq1A: "Therapy focuses on mental health, emotional wellbeing, and personal growth using NLP techniques. Social work services help with practical life matters: navigating government systems, benefit applications, legal documentation, case management, and advocacy with authorities.",
-        faq2Q: "Can you help with legal matters or replace a lawyer?",
-        faq2A: "I provide case management and administrative support, including documentation preparation and coordination with lawyers. However, I am not a lawyer and cannot provide legal advice. For legal matters, I work alongside your legal representation to ensure comprehensive support.",
+        faq2Q: "Can you help with legal matters?",
+        faq2A: "I provide case management and administrative support, including documentation preparation, coordination and consultation.",
         faq3Q: "What types of social welfare benefits can you help with?",
-        faq3A: "I assist with disability benefits (førtidspension), unemployment benefits (dagpenge), housing support (boligstøtte), family benefits, integration support, and other social welfare services available in Denmark. I help with applications, appeals, and communication with authorities.",
+        faq3A: "I can truely support you in all kind of cases like: disability benefits in early retirement, unemployment benefits , housing support, family benefits, integration support, and other social welfare services available in Denmark. I help with applications, appeals, and communication with authorities.",
         faq4Q: "Do you work with Danish authorities and government agencies?",
-        faq4A: "Yes. As a licensed Danish social worker, I regularly coordinate with communes, job centers, housing services, family services, and other government agencies on behalf of my clients. I can attend meetings, prepare documentation, and advocate for your needs.",
+        faq4A: "Yes. As an accredited Danish social worker, I regularly coordinate with communes, job centers, housing services, family services, and other government agencies on behalf of my clients. I can attend meetings, prepare documentation, and advocate for your needs.",
         faq5Q: "Can you help with immigration and residency matters?",
         faq5A: "Yes. I provide support with residency applications, family reunification cases, integration programs, and navigating immigration services. My multilingual skills (Ukrainian, Russian, Danish, English) are particularly helpful for recent immigrants.",
         faq6Q: "How do the case management packages work?",
@@ -1318,14 +1318,14 @@ function throttle(func, limit) {
         bookingTitle: "Book an Appointment",
         bookingFormTitle: "Select Your Service",
         serviceType: "Service type",
-        serviceFree: "Free Consultation / Assessment (20 min.) - Free",
-        serviceIndividual: "Individual NLP Therapy/Consultation (60 min.) - 900 kr.",
-        serviceIntensive: "NLP Intensive Session/Consultation (90 min.) - 1300 kr.",
-        serviceCouples: "Couples NLP Session/Consultation (90 min) - 1400 kr.",
-        serviceSocial: "Social Work Consultation/Case Management (60 min.) - 1000 kr.",
-        serviceSocialBasic: "Social Work Consultation/Case Management Basic (240 min./4 Hours) - 3500 kr.",
-        serviceSocialMedium: "Social Work Consultation/Case Management Medium (600 min./10 Hours) - 8000 kr.",
-        serviceSocialLarge: "Social Work Consultation/Case Management Large (900 min./15 Hours) - 11500 kr.",
+        serviceFree: "Free Consultation / Assessment (20 min.) Free",
+        serviceIndividual: "Individual NLP Therapy/Consultation (60 min.) 900 kr.",
+        serviceIntensive: "NLP Intensive Session/Consultation (90 min.) 1300 kr.",
+        serviceCouples: "Couples NLP Session/Consultation (90 min) 1400 kr.",
+        serviceSocial: "Social Work Consultation/Case Management (60 min.) 1000 kr.",
+        serviceSocialBasic: "Social Work Consultation/Case Management Basic (240 min./4 Hours) 3500 kr.",
+        serviceSocialMedium: "Social Work Consultation/Case Management Medium (600 min./10 Hours) 8000 kr.",
+        serviceSocialLarge: "Social Work Consultation/Case Management Large (900 min./15 Hours) 11500 kr.",
         formName: "Your name (optional)",
         formNamePlaceholder: "Enter your full name",
         formEmail: "Email address",
@@ -1333,7 +1333,7 @@ function throttle(func, limit) {
         formPhone: "Phone (optional)",
         formPhonePlaceholder: "+45 00 00 00 00",
         formMessage: "Brief description (optional)",
-        formMessagePlaceholder: "Do you have any specific concerns?",
+        formMessagePlaceholder: "How can I help you?",
         submitBtn: "Request Appointment",
         sessionInfoTitle: "Session Information",
         sessionSchedule: "🕒 Flexible scheduling: weekdays & weekends",
